# sampling_c3_without_z

./: WORKSPACE  push_anything.sdf
bindings/pydairlib/solvers/: c3_py.cc
examples/franka/systems/: franka_kinematics.cc  franka_kinematics.h  franka_kinematics_vector.h
examples/sampling_c3/: BUILD.bazel  c3_mode_visualizer.cc  control_target_generator.cc  control_target_generator.h  franka_bridge_driver_in.cc  franka_bridge_driver_out.cc  franka_c3_controller.cc  franka_joint_osc_controller.cc  franka_osc_controller.cc  franka_sim.cc  franka_state_translator.cc  franka_state_translator.h  franka_visualizer.cc  start_logging.py  xbox_script.py
examples/sampling_c3/ball_rolling/: BUILD.bazel  franka_sim_ball_rolling.pmd
examples/sampling_c3/ball_rolling/parameters/: franka_c3_controller_params.yaml  franka_c3_options_floating.yaml  franka_osc_controller_params.yaml  franka_sim_params.yaml  sampling_c3_options.yaml  sampling_params.yaml  trajectory_params.yaml
examples/sampling_c3/box_topple/: BUILD.bazel  franka_hardware.pmd  franka_sim_box_topple.pmd
examples/sampling_c3/box_topple/parameters/: franka_c3_controller_params.yaml  franka_c3_options_floating.yaml  franka_sim_params.yaml  sampling_c3_options.yaml  sampling_params.yaml  trajectory_params.yaml
examples/sampling_c3/diagram/push_anything/: franka_c3_plant  franka_osc_controller_diagram  loop_franka_c3_controller_diagram  visualizer_diagram
examples/sampling_c3/jacktoy/: BUILD.bazel  franka_hardware.pmd  franka_sim_jacktoy.pmd
examples/sampling_c3/jacktoy/parameters/: franka_c3_controller_params.yaml  franka_c3_options_floating.yaml  franka_osc_controller_params.yaml  franka_sim_params.yaml  sampling_c3_options.yaml  sampling_params.yaml  trajectory_params.yaml
examples/sampling_c3/parameter_headers/: BUILD.bazel  franka_c3_controller_params.h  franka_lcm_channels.h  franka_osc_controller_params.h  franka_sim_params.h  sampling_c3_options.h  trajectory_params.h
examples/sampling_c3/push_anything/: BUILD.bazel  franka_hardware.pmd  franka_sim_push_T.pmd
examples/sampling_c3/push_anything/parameters/: franka_c3_controller_params.yaml  franka_osc_controller_params.yaml  franka_sim_params.yaml  sampling_c3_options.yaml  trajectory_params.yaml
examples/sampling_c3/push_t/: franka_hardware.pmd  franka_sim_push_T.pmd
examples/sampling_c3/push_t/parameters/: franka_c3_controller_params.yaml  franka_c3_options_floating.yaml  franka_sim_params.yaml  sampling_c3_options.yaml  sampling_params.yaml  trajectory_params.yaml
examples/sampling_c3/shared_parameters/: lcm_channels_hardware.yaml  lcm_channels_simulation.yaml
examples/sampling_c3/test/: BUILD.bazel  cost_visualization.py  lcm_log_loader.cc
examples/sampling_c3/urdf/: T_vertical.sdf  T_vertical_sim.sdf  box.sdf  box_sim.sdf  end_effector_simple_model.urdf  ground_modified.sdf  jack.sdf  platform.urdf  push_anything_sim.sdf  sdf_generation.py  show_collosion.py  target.sdf  target_sim.sdf
examples/sampling_c3/urdf/mesh/cracker_box/: textured.mtl
install/: install_prereqs_jammy.sh
lcmtypes/: lcmt_sample_buffer.lcm  lcmt_sampling_c3_debug.lcm  lcmt_sampling_controller_debug.lcm
multibody/: multibody_utils.cc  multipose_visualizer.cc  multipose_visualizer.h
solvers/: c3.cc  c3.h  c3_miqp.cc  c3_options.h  c3_qp.cc  lcs.cc  lcs.h  lcs_factory.cc  lcs_factory.h
systems/: BUILD.bazel  end_effector_force_trajectory.cc  end_effector_force_trajectory.h  end_effector_orientation.cc  end_effector_orientation.h  end_effector_trajectory.cc  end_effector_trajectory.h  franka_kinematics.cc  franka_kinematics.h  franka_kinematics_vector.cc  franka_kinematics_vector.h  robot_lcm_systems.cc  system_utils.cc
systems/controllers/: BUILD.bazel  generate_samples.cc  generate_samples.h  sampling_based_c3_controller.cc  sampling_based_c3_controller.h  sampling_params.h
systems/controllers/c3/: c3_controller.h
systems/controllers/osc/: operational_space_control.cc
systems/sender_systems/: BUILD.bazel  c3_state_sender.cc  sample_buffer_sender.cc  sample_buffer_sender.h  sample_buffer_to_point_cloud.cc  sample_buffer_to_point_cloud.h
systems/visualization/: lcm_visualization_systems.cc  lcm_visualization_systems.h
