package(default_visibility = ["//visibility:public"])

cc_library(
    name = "sender_systems",
    srcs = [],
    deps = [
        ":sample_buffer_sender",
        ":c3_state_sender",
        ":sample_buffer_to_point_cloud",
    ],
)

cc_library(
    name = "sample_buffer_to_point_cloud",
    srcs = [
        "sample_buffer_to_point_cloud.cc",
    ],
    hdrs = [
        "sample_buffer_to_point_cloud.h",
    ],
    deps = [
        "//common:find_resource",
        "//lcmtypes:lcmt_robot",
        "//multibody:utils",
        "//systems/framework:vector",
        "@drake//:drake_shared_library",
        "//lcm:lcm_trajectory_saver",
        "@lcm",
    ],
)

cc_library(
    name = "sample_buffer_sender",
    srcs = [
        "sample_buffer_sender.cc",
    ],
    hdrs = [
        "sample_buffer_sender.h",
    ],
    deps = [
        "//lcmtypes:lcmt_robot",
        "//common",
        "//common:find_resource",
        "//systems/framework:vector",
        "@drake//:drake_shared_library",
    ],
)

cc_library(
    name = "c3_state_sender",
    srcs = [
        "c3_state_sender.cc",
    ],
    hdrs = [
        "c3_state_sender.h",
    ],
    deps = [
        "//lcmtypes:lcmt_robot",
        "//systems/framework:vector",
        "@drake//:drake_shared_library",
    ],
)

