# -*- mode: python -*-
# vi: set ft=python :

package(default_visibility = ["//visibility:public"])

cc_library(
    name = "urdfs",
    data = glob([
        "urdf/**",
    ]),
)

cc_library(
    name = "parameters",
    data = glob([
        "*yaml",
    ]),
)

cc_library(
    name = "franka_hardware",
    deps = [],
)

cc_binary(
    name = "franka_ros_lcm_bridge",
    srcs = ["franka_ros_lcm_bridge.cc"],
    data = [
        ":urdfs",
        "@drake_models//:franka_description",
    ],
    tags = ["ros"],
    deps = [
        ":franka_lcm_channels_ball_rolling",
        ":franka_sim_params_ball_rolling",
        "//common",
        "//systems:robot_lcm_systems",
        "//systems:system_utils",
        "//systems/primitives",
        "//systems/ros:franka_ros_channels",
        "//systems/ros:franka_ros_lcm_conversions",
        "//systems/ros:ros_pubsub_systems",
        "@drake//:drake_shared_library",
        "@gflags",
        "@ros",
    ],
)

cc_binary(
    name = "franka_lcm_ros_bridge",
    srcs = ["franka_lcm_ros_bridge.cc"],
    data = [
        ":urdfs",
        "@drake_models//:franka_description",
    ],
    tags = ["ros"],
    deps = [
        ":franka_lcm_channels_ball_rolling",
        ":franka_sim_params_ball_rolling",
        "//common",
        "//systems:robot_lcm_systems",
        "//systems:system_utils",
        "//systems/framework:lcm_driven_loop",
        "//systems/ros:franka_ros_channels",
        "//systems/ros:franka_ros_lcm_conversions",
        "//systems/ros:ros_pubsub_systems",
        "@drake//:drake_shared_library",
        "@gflags",
        "@ros",
    ],
)

cc_library(
    name = "franka_lcm_channels_ball_rolling",
    hdrs = [],
    data = [
        "//examples/sampling_c3:shared_params_yamls",
    ],
    deps = [
        "//examples/sampling_c3/parameter_headers:franka_lcm_channels",
        "//systems/framework:vector",
        "@drake//:drake_shared_library",
    ],
)

cc_library(
    name = "franka_sim_params_ball_rolling",
    hdrs = [],
    data = [
        "parameters/franka_sim_params.yaml",
    ],
    deps = [
        "//examples/sampling_c3/parameter_headers:franka_sim_params",
        "@drake//:drake_shared_library",
    ],
)

cc_library(
    name = "franka_osc_controller_params_ball_rolling",
    hdrs = [],
    data = [
        "parameters/franka_osc_controller_params.yaml",
    ],
    deps = [
        "//examples/sampling_c3/parameter_headers:franka_osc_controller_params",
        "@drake//:drake_shared_library",
    ],
)

cc_library(
    name = "franka_c3_controller_params_ball_rolling",
    hdrs = [],
    data = [
        "parameters/franka_c3_controller_params.yaml",
        "parameters/franka_c3_options_floating.yaml",
        "//examples/sampling_c3:shared_params_yamls",
    ],
    deps = [
        "//examples/sampling_c3/parameter_headers:franka_c3_controller_params",
        "//solvers:c3",
        "@drake//:drake_shared_library",
    ],
)

cc_library(
    name = "trajectory_params_ball_rolling",
    hdrs = [],
    data = [
        "parameters/trajectory_params.yaml",
    ],
    deps = [
        "//examples/sampling_c3/parameter_headers:trajectory_params",
        "//solvers:c3",
        "@drake//:drake_shared_library",
    ],
)